syntax = "proto3";

option go_package = "github.com/pinbrain/gophkeeper/internal/proto";

message RegisterReq {
  string email = 1;
  string login = 2;
  string password = 3;
}

message RegisterRes {
  string token = 1;
}

message LoginReq {
  string login = 1;
  string password = 2;
}

message LoginRes {
  string token = 1;
}

service UserService {
  rpc Register(RegisterReq) returns(RegisterRes);
  rpc Login(LoginReq) returns(LoginRes);
}